# diskdex

./: .gitignore  HANDOFF.md  README.md  SIGNING.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: DISENO-cloud-y-backup.md  HANDOFF-2026-07-19-release-y-web.md  HANDOFF.md  PRESENTACION-TODO.md  PRESENTACION.md  slides-comercial.html  slides.html
scripts/: fetch-ffmpeg.sh
site/: .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
site/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
site/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
site/.next/cache/webpack/client-production/: 1.pack  2.pack  3.pack  4.pack  5.pack  6.pack  index.pack  index.pack.old
site/.next/cache/webpack/edge-server-production/: index.pack
site/.next/cache/webpack/server-production/: 1.pack  2.pack  3.pack  5.pack  6.pack  7.pack
site/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  middleware.js  middleware.js.map  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
site/.next/server/app/: _not-found.html  _not-found.rsc  en.html  en.rsc  es.html  es.rsc  manifest.webmanifest.body  robots.txt.body  sitemap.xml.body
site/.next/server/app/[locale]/: page.js  page.js.nft.json  page_client-reference-manifest.js
site/.next/server/app/[locale]/opengraph-image/: route.js  route.js.nft.json  route_client-reference-manifest.js
site/.next/server/app/_not-found/: page.js  page.js.nft.json  page_client-reference-manifest.js
site/.next/server/app/icon.svg/: route.js
site/.next/server/app/manifest.webmanifest/: route.js  route_client-reference-manifest.js
site/.next/server/app/robots.txt/: route.js  route_client-reference-manifest.js
site/.next/server/app/sitemap.xml/: route.js  route_client-reference-manifest.js
site/.next/server/chunks/: 387.js  60.js  844.js
site/.next/server/pages/: 500.html
site/.next/static/bILpzP88jt0gtSugMOJ7p/: _buildManifest.js
site/.next/static/chunks/: 760-39bb119496a6fbc8.js  main-app-8ec53ec3694563c3.js  main-fe413fa50d7bc004.js  webpack-f61e1a0e6b20055b.js
site/.next/static/chunks/app/: not-found-b6754babf1e1515c.js
site/.next/static/chunks/app/[locale]/: layout-dc031714e33ec80c.js  page-32192b18f0bca886.js
site/.next/static/chunks/app/sitemap.xml/: route-f28a47370f1daa20.js
site/.next/static/css/: dc2e1f7e34907b1a.css
site/.next/types/app/[locale]/: layout.ts  page.ts
site/.vercel/: project.json
site/app/: globals.css  manifest.ts  not-found.tsx  sitemap.ts
site/app/[locale]/: layout.tsx  opengraph-image.tsx  page.tsx
site/components/: AppWindow.tsx  Button.tsx  Footer.tsx  Header.tsx  Icons.tsx  LanguageSwitcher.tsx  Logo.tsx  Reveal.tsx  SectionHeading.tsx
site/components/sections/: Download.tsx  Faq.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  Roadmap.tsx  Screenshots.tsx  Trust.tsx
site/i18n/: config.ts  dictionaries.ts
site/i18n/dictionaries/: en.ts  es.ts
site/lib/: site.ts
site/public/: llms.txt
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  ai.rs  archive.rs  commands.rs  db.rs  dcmf.rs  geo.rs  lib.rs  main.rs  scan.rs  video.rs
src/components/: BackupAuditDialog.tsx  CompareDialog.tsx  ContentTable.tsx  ContentToolbar.tsx  DuplicatesDialog.tsx  GatherDialog.tsx  Inspector.tsx  MissingTree.tsx  ScanDialog.tsx  SearchBar.tsx  SettingsDialog.tsx  ShareDialog.tsx  Sidebar.tsx  Splash.tsx  StatsDialog.tsx  TransferAnimation.tsx
src/components/ui/: button.tsx  dialog.tsx  tooltip.tsx
src/lib/: actions.ts  claude-nl.test.ts  claude-nl.ts  errors.ts  export.ts  format.ts  i18n.ts  ipc.ts  nl-parser.test.ts  nl-parser.ts  notify.ts  query-parser.test.ts  query-parser.ts  settings.ts  utils.ts  version.ts
src/lib/i18n/: strings.ts
src/store/: catalog.ts  copy.ts
