[package]
name = "diskdex"
version = "0.1.0"
description = "Disk catalog app (DiskCatalogMaker-compatible) with secure remote connector"
authors = ["polgold"]
edition = "2021"
# Hay varios binarios auxiliares (agent_probe/scan_probe/validate_dcmf); este es
# el que `cargo run` / `tauri dev` deben lanzar por defecto.
default-run = "diskdex"
# Declaramos los binarios a mano (abajo) para gatear los auxiliares detrás de la
# feature `tools`: así `cargo build --release` (y por ende `tauri build`) solo
# compila `diskdex` y los probes NO terminan dentro del .app/instalador.
autobins = false

[features]
# Herramientas de diagnóstico/CLI (no se incluyen en el instalador).
# Uso: cargo run --release --features tools --bin validate_dcmf -- ...
tools = []

# IA local (spike Fase 1): búsqueda semántica de imágenes/video con CLIP/SigLIP
# multilingüe vía candle. Pesa el build (candle-transformers), por eso está
# APAGADA por default. Uso: cargo run --features ai --bin embed_probe -- <catalog> <query...>
ai = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub", "dep:rand"]
# BLAS de Apple (Accelerate) para inferencia rápida en CPU (Intel/ARM mac).
# Uso junto a `ai`: cargo run --features ai,accel --profile release-ai --bin embed_probe
accel = ["dep:accelerate-src", "candle-core/accelerate"]

[lib]
# El sufijo `_lib` evita conflicto de nombre con el binario en Windows.
name = "diskdex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Binario principal de la app (el que empaqueta Tauri).
[[bin]]
name = "diskdex"
path = "src/main.rs"

# Auxiliares de diagnóstico: solo se compilan con --features tools.
[[bin]]
name = "validate_dcmf"
path = "src/bin/validate_dcmf.rs"
required-features = ["tools"]

[[bin]]
name = "agent_probe"
path = "src/bin/agent_probe.rs"
required-features = ["tools"]

[[bin]]
name = "scan_probe"
path = "src/bin/scan_probe.rs"
required-features = ["tools"]

# Spike IA Fase 1: corre SigLIP multilingüe sobre los thumbnails ya cacheados de
# un catálogo real y rankea por una query de texto ("perros", "árboles"…).
[[bin]]
name = "embed_probe"
path = "src/bin/embed_probe.rs"
required-features = ["ai"]

# Spike IA Fase 4 (Whisper): transcribe el audio de un archivo (ffmpeg → mel →
# whisper-base multilingüe) e imprime el texto. De-riesga la transcripción.
[[bin]]
name = "whisper_probe"
path = "src/bin/whisper_probe.rs"
required-features = ["ai"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Importador .dcmf (sección 6): inflado zlib en streaming.
flate2 = "1"

# Base de datos: SQLite + FTS5, un archivo por catálogo.
rusqlite = { version = "0.32", features = ["bundled"] }

# Motor de escaneo (sección 7).
walkdir = "2"
# Listado de volúmenes montados + capacidad + tipo (HDD/SSD) + removible.
sysinfo = "0.32"

# Conector remoto seguro (sección 9): servidor HTTP del agente.
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "net"] }
tokio-util = { version = "0.7", features = ["io"] }
# Auth: JWT HS256 propio (hmac+sha2) para evitar dependencias pesadas de crypto.
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
blake3 = "1"
getrandom = "0.2"

# Thumbnails / preview on-demand (P2) — solo formatos comunes para no inflar el build.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }

# Fase B — lectura del contenido (índice de nombres/tamaños/fechas) de archivos
# comprimidos. Todo en Rust puro o con fuente bundleada (sin deps de sistema).
zip = "2"
sevenz-rust = "0.6"
unrar = "0.5"

# Mover a la papelera del sistema (limpieza de discos), multiplataforma.
trash = "5"

# Reverse-geocoding OFFLINE (C1): mapea lat/lon → ciudad/provincia/país sin red.
# Bundlea un dataset de ciudades (GeoNames) → habilita buscar "clips de Jujuy".
reverse_geocoder = "4"

# Utilidades.
anyhow = "1"
thiserror = "2"

# --- IA local (feature `ai`, opcional; spike Fase 1) ---
# Inferencia en Rust puro (CPU acá en Intel; Metal/accelerate vienen después).
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
# Tokenizer del encoder de texto multilingüe (tokenizer.json del repo de HF).
tokenizers = { version = "0.21", optional = true }
# Descarga + caché del modelo desde Hugging Face (~/.cache/huggingface).
hf-hub = { version = "0.4", optional = true }
# BLAS de Apple para candle (feature `accel`).
accelerate-src = { version = "0.3", optional = true }
# Sampling con temperatura en el fallback de Whisper (decodificación robusta).
rand = { version = "0.9", optional = true }

# statfs (tipo de FS + tamaños) para detectar volúmenes de red montados que
# sysinfo no enumera (SMB/AFP/NFS) en /Volumes.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Fingerprint y tamaño físico en Windows (GetCompressedFileSizeW / GetVolumeInformationW).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Perfil para iterar el spike de IA: opt-level 3 (inferencia rápida) pero SIN LTO
# ni codegen-units=1, así candle compila en minutos en vez de decenas de minutos.
[profile.release-ai]
inherits = "release"
lto = false
codegen-units = 16
